# multimr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  justfile  multimr.code-workspace  multimr.schema.json  multimr.toml
src/: app.rs  config.rs  main.rs  merge_request.rs  test_main.rs  utils.rs
src/app/: input.rs  mod.rs
