[package]
name = "multimr"
version = "0.1.0"
description = "Create identical MR/PRs on multiple repositories."
authors = ["W. Meijer <houterm@gmail.com>"]
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/h0uter/multimr"
documentation = "https://docs.rs/multimr"
readme = "README.md"
keywords = [
    "git",
    "gitlab",
    "merge request",
    "pull request",
    "multi repo",
]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "mmr"
path = "src/main.rs"

[[bin]]
name = "multimr"
path = "src/main.rs"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
git2 = "0.20.2"
clap = { version = "4.5.39", features = ["derive"] }
